--- a/data/LevelsWindow.ui
+++ b/data/LevelsWindow.ui
@@ -34,7 +34,7 @@
      <widget class="QPushButton" name="pushButton">
       <property name="font">
        <font>
-        <family>Yu Gothic UI Semibold</family>
+        <family>Arial</family>
         <pointsize>20</pointsize>
        </font>
       </property>
@@ -66,7 +66,7 @@
      <widget class="QPushButton" name="pushButton_2">
       <property name="font">
        <font>
-        <family>Yu Gothic UI Semibold</family>
+        <family>Arial</family>
         <pointsize>20</pointsize>
        </font>
       </property>
@@ -98,7 +98,7 @@
      <widget class="QPushButton" name="pushButton_3">
       <property name="font">
        <font>
-        <family>Yu Gothic UI Semibold</family>
+        <family>Arial</family>
         <pointsize>20</pointsize>
        </font>
       </property>
@@ -130,7 +130,7 @@
      <widget class="QPushButton" name="pushButton_4">
       <property name="font">
        <font>
-        <family>Yu Gothic UI Semibold</family>
+        <family>Arial</family>
         <pointsize>20</pointsize>
        </font>
       </property>
@@ -152,7 +152,7 @@
    </property>
    <property name="font">
     <font>
-     <family>Yu Gothic UI Semibold</family>
+     <family>Arial</family>
      <pointsize>20</pointsize>
     </font>
    </property>
