--- a/data/MenuWindow.ui
+++ b/data/MenuWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1920</width>
-    <height>1680</height>
+    <height>1080</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,10 +25,10 @@
     </property>
     <property name="font">
      <font>
-      <family>Yu Gothic</family>
+      <family>Arial</family>
       <pointsize>45</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="text">
@@ -40,7 +40,7 @@
      <rect>
       <x>69</x>
       <y>239</y>
-      <width>396</width>
+      <width>471</width>
       <height>561</height>
      </rect>
     </property>
@@ -49,7 +49,7 @@
       <widget class="QPushButton" name="pushButton">
        <property name="font">
         <font>
-         <family>Yu Gothic UI Semibold</family>
+         <family>Arial</family>
          <pointsize>20</pointsize>
          <weight>50</weight>
          <bold>false</bold>
@@ -61,10 +61,40 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="pushButton_6">
+       <property name="font">
+        <font>
+         <family>Arial</family>
+         <pointsize>20</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Загрузить последнее сохранение</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_5">
+       <property name="font">
+        <font>
+         <family>Arial</family>
+         <pointsize>20</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Загрузить игру</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="pushButton_2">
        <property name="font">
         <font>
-         <family>Yu Gothic UI Semibold</family>
+         <family>Arial</family>
          <pointsize>20</pointsize>
         </font>
        </property>
@@ -77,7 +107,7 @@
       <widget class="QPushButton" name="pushButton_3">
        <property name="font">
         <font>
-         <family>Yu Gothic UI Semibold</family>
+         <family>Arial</family>
          <pointsize>20</pointsize>
         </font>
        </property>
@@ -90,7 +120,7 @@
       <widget class="QPushButton" name="pushButton_4">
        <property name="font">
         <font>
-         <family>Yu Gothic UI Semibold</family>
+         <family>Arial</family>
          <pointsize>20</pointsize>
         </font>
        </property>
@@ -108,7 +138,7 @@
      <x>0</x>
      <y>0</y>
      <width>1920</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
